# NG-Scope

./: .gitignore  CHANGELOG  CMakeLists.txt  README.md  cd_include_ue  cd_src_ue  cscope.in.out  dev_notes  enter_lib_hdr_phy  enter_lib_src_phy  install.sh  push_github  test_client_log.m
cellinspector/headers/: asn_decoder.h
cellinspector/source/: CMakeLists.txt  asn_decoder.c  cell_scan.c  cpu.c  main.c
cellscanner/headers/: bands.h
cellscanner/source/: main.c
jonscope/: CMakeLists.txt
jonscope/headers/: cell_scan.h
jonscope/source/: CMakeLists.txt  cell_scan.c  cpu.c  main.backup  main.c
lib/: CMakeLists.txt
lib/LTEScope/: .cca_main_remote.cpp.swo  .cca_main_remote.cpp.swp  .cca_main_server.cpp.swo  .cca_main_server.cpp.swp  .read_cfg.c.swp  CMakeLists.txt  bbr_rate_test.cpp  ca_trigger_test.cpp  cca_main.cpp  cca_main_client.cpp  cca_main_noRF.cpp  cca_main_remote.cpp  cca_main_remote_rf.cpp  cca_main_server.cpp  cca_test.cpp  cca_test_single.cpp  dci_decode_multi_usrp.c  dci_decode_multi_usrp.h  dci_decoder.c  dci_log_UE.c  findRNTI.cpp  fix_rate_client.cpp  heart_beat.c  multi_usrp.c  multi_usrp_log.c  read_cfg.c  read_cfg.h  remote_serv_test.cpp  remote_serv_test.cpp_bkup  test_caTrigger.cpp  test_cca.cpp
lib/LTEScope/lib_dci/: dci_usrp.c  load_config.c  load_config.h  lteScop_main.c  lteScop_main.h
lib/LTEScope/lib_src/: .client.cc.swp  .serv_sock.cpp.swp  acker.cc  acker.hh  cca_main.cpp  cca_main.h  client.cc  client.hh  overhead.h  payload.hh  serv_sock.cpp  serv_sock.h  socket.cc  socket.hh  trace.h  usrp_sock.cpp  usrp_sock.h  win_minmax.h
lib/LTEScope/scripts/: cp_bash  findRNTI.sh  mv_client_log.sh  mv_dci_trace.sh  mv_lteCCA_trace.sh  mv_trace_cca_test.sh  pull_git.sh  push_git.sh  test_BBR.sh
lib/PBE/: CMakeLists.txt  config.cfg  cpuUsage.py  scp_bash  testDCI.cpp
lib/csi_main/: CMakeLists.txt  socketTest.c
lib/dciLog/: CMakeLists.txt  dciLogger.c  dci_decode_multi_usrp.c  read_cfg.c
lib/examples/: .conf_test.c.swp  .dci_decode_multi_usrp.c.swp  .pdsch_ue.c.swp  .read_cfg.c.swp  .read_cfg.h.swp  CMakeLists.txt  cell_search.c  conf_test.c  dci_decode_main.c  dci_decode_main.h  dci_decode_multi_usrp.c  dci_decode_multi_usrp.h  dci_test.c  decode_phich.c  multi_usrp.c  ng_scope_main.c  pdsch_ue.c  phich_decoder.bkup  phich_decoder.c  phich_decoder.h  read_cfg.c  read_cfg.h  usrp_iq_collector.c
lib/include/srslte/: srslte.h
lib/include/srsran/: srsran.h
lib/include/srsran/common/: common.h
lib/include/srsran/radio/: channel_mapping.h
lib/lib_csi/: CMakeLists.txt  arg_parser.c  arg_parser.h  dci_decoder.c  dci_decoder.h  dci_ue_status.c  dci_ue_status.h  dci_usrp.c  dci_usrp.h  load_config.c  load_config.h  lteScop_main.c  status_main.c  status_main.h  time_period.h  ue_cell_status.c  ue_cell_status.h
lib/lib_csi/bkup/: ue_cell_status.c
lib/lib_dci/: CMakeLists.txt  dci_decoder.c  dci_ue_status.c  dci_usrp.c  hello.h  load_config.c  load_config.h  lteScop_main.c  lteScop_main.h  status_main.c  status_main.h  status_math.c  status_math.h  time_period.c  ue_cell_status.c  ue_cell_status.h
lib/lib_src/: .cca_main.cpp.swp  .cca_main.h.swp  .client.cc.swp  .client.hh.swp  CMakeLists.txt  cca_main.cpp  cca_main.h  client.cc  client.hh  config.cpp  config.h  payload.cc  payload.hh  timestamp.h  trace.cpp  usrp_sock.cpp  usrp_sock.h
lib/ltecc/: CMakeLists.txt  cca_main.cpp  read_cfg.c
lib/ngscope/: CMakeLists.txt  main.c
lib/src/phy/: CMakeLists.txt
lib/src/phy/ngscope/: CMakeLists.txt  README  ngscope.c  ngscope.c_bkup  ngscope_dci.c  ngscope_dci_decode.c  ngscope_decode.c  ngscope_search_space.c  ngscope_srch_space.c  ngscope_tree.c
lib/src/phy/ngscope_bkup/: ngscope.c  ngscope_tree.c
lib/src/phy/phch/: .pdcch.c.swp  dci.c  pdcch.c  ra.c  ra_dl.c  ra_ul.c  tbs_tables.h
lib/src/phy/rf/: CMakeLists.txt  rf_imp.c
lib/src/phy/ue/: -S  .ue_cell_status.c.swo  .ue_dl.c.swp  bin_tree.c  lte_scope.c  ngscope.c  (+14 more)
libasn4g/: README.md
libasn4g/headers/: libasn4g.h
libasn4g/source/: libasn4g.c
libasn4g/spec/: EUTRA-RRC-Definitions.asn
ngscope/: CMakeLists.txt
ngscope/config/: config.cfg
ngscope/hdr/dciLib/: .asn_decoder.h.swp  .time_stamp.h.swp  asn_decoder.h  cell_status.h  dci_decoder.h  dci_log.h  dci_ring_buffer.h  dci_sink_client.h  dci_sink_config.h  dci_sink_dci_recv.h  dci_sink_def.h  dci_sink_recv_dci.h  dci_sink_ring_buffer.h  dci_sink_serv.h  dci_sink_sock.h  decode_sib.h  load_config.h  ngscope_def.h  ngscope_main.h  ngscope_util.h  parse_args.h  phich_decoder.h  radio.h  sib1_helper.h  skip_tti.h  socket.h  status_plot.h  status_tracker.h  sync_dci_remote.h  task_scheduler.h  task_sf_ring_buffer.h  thread_exit.h  time_stamp.h  ue_list.h  ue_tracker.h
ngscope/scripts/: config.cfg
ngscope/src/: CMakeLists.txt  config.cfg  main.c  remote_client.c  remote_server.c
ngscope/src/dciLib/: '  .dci_decoder.c.swp  .dci_log.c.swp  CMakeLists.txt  README  asn_decoder.c  cell_status.c  dci_decoder.c  dci_log.c  dci_log.c_bkup  dci_ring_buffer.c  dci_sink_client.c  dci_sink_recv_dci.c  dci_sink_ring_buffer.c  dci_sink_send_dci.c  dci_sink_serv.c  dci_sink_sock.c  decode_sib.cpp  load_config.c  ngscope_main.c  ngscope_util.c  parse_args.c  phich_decoder.c  radio.c  sib1_helper.cpp  skip_tti.c  socket.c  status_plot.c  status_tracker.c  status_tracker.c_bkup  sync_dci_remote.c  task_scheduler.c  task_scheduler.c_bkup  task_sf_ring_buffer.c  thread_exit.c  time_stamp.c  ue_list.c  ue_tracker.c
ngscope_refactor/: CMakeLists.txt  README.md  main.c
ngscope_refactor/app/: CMakeLists.txt  main.c
ngscope_refactor/dci_lib/: CMakeLists.txt
ngscope_refactor/dci_lib/hdr/: dci_decoder.h  hello.h  ngscope.h  ngscope_def.h  parse_args.h  radio.h  task_scheduler_lib.h  task_scheduler_main.h
ngscope_refactor/dci_lib/src/: CMakeLists.txt  dci_decoder.c  dci_decoder_raw.c  hello.c  parse_args.c  radio.c  task_scheduler_lib.c  task_scheduler_main.c
ngscope_refactor/util/: README.md  ping_google.sh
sibscope/headers/: cpu.h
sibscope/source/: CMakeLists.txt  cell_scan.c  cpu.c  main.c
thesis/: config.cfg  config_5g.cfg
(+33 files in other folders)
